# tabula

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
desktop/: index.html  package-lock.json  package.json
desktop/src/: api.ts  main.ts  state.ts  style.css  types.ts  utils.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: ai.rs  main.rs  server.rs  storage.rs
desktop/src/components/: Sidebar.ts  TabCard.ts
desktop/src/views/: HistoryView.ts  ReportView.ts  SettingsView.ts  StatsView.ts  TabsView.ts
docs/: API.md  ARCHITECTURE.md  DATA-MODELS.md
extension/: build.mjs  manifest.json  package-lock.json  package.json  tsconfig.json
extension/src/: background.ts  content.ts  popup.html  popup.ts  types.ts
extension/src/modules/: config.ts  handlers.ts  index.ts  screenshot.ts  server.ts  state.ts  sync.ts  timer.ts  types.ts  utils.ts  websocket.ts
scripts/: bump-version.mjs
shared/: README.md  types.ts
